[package]
name = "benln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.0.116", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.116", features = [ "rpc-client" ] }
lightning-invoice = { version = "0.24.0" }
lightning-net-tokio = { version = "0.0.116" }
lightning-persister = { version = "0.0.116" }
lightning-background-processor = { version = "0.0.116" }
lightning-rapid-gossip-sync = { version = "0.0.116" }
bitcoin = { version = "0.29.2" }
esplora-client = { version = "0.6.0" }
rand = { version = "0.8.5" }
base64 = "0.13.0"
serde_json = "1.0.104"
bdk = { version = "1.0.0-alpha.1", default-features = false }
bdk-macros = "0.6.0"
bdk_chain = { version = "0.5.0", default-features = false, features = ["hashbrown"] }
bdk_esplora = { version = "0.3.0", default-features = false, features = ["async-https"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = "1.0.183"
futures = { version = "0.3", optional = true }
miniscript = { version = "9.0.2", default-features = false, features = ["no-std"] }
futures-util = { version = "0.3", default-features = false }